--- a/package/crds/dataproc.gcp.upbound.io_metastoreservices.yaml
+++ b/package/crds/dataproc.gcp.upbound.io_metastoreservices.yaml
@@ -1534,6 +1534,10 @@ spec:
                       Default value is MYSQL.
                       Possible values are: MYSQL, SPANNER.
                     type: string
+                  deletionProtection:
+                    description: Indicates if the dataproc metastore should be protected
+                      against accidental deletions.
+                    type: boolean
                   encryptionConfig:
                     description: |-
                       Information used to configure the Dataproc Metastore service to encrypt
@@ -1943,6 +1947,10 @@ spec:
                       Default value is MYSQL.
                       Possible values are: MYSQL, SPANNER.
                     type: string
+                  deletionProtection:
+                    description: Indicates if the dataproc metastore should be protected
+                      against accidental deletions.
+                    type: boolean
                   encryptionConfig:
                     description: |-
                       Information used to configure the Dataproc Metastore service to encrypt
@@ -2510,6 +2518,10 @@ spec:
                       Default value is MYSQL.
                       Possible values are: MYSQL, SPANNER.
                     type: string
+                  deletionProtection:
+                    description: Indicates if the dataproc metastore should be protected
+                      against accidental deletions.
+                    type: boolean
                   effectiveLabels:
                     additionalProperties:
                       type: string
