--- a/package/crds/filestore.gcp.upbound.io_backups.yaml
+++ b/package/crds/filestore.gcp.upbound.io_backups.yaml
@@ -177,6 +177,16 @@ spec:
                             type: string
                         type: object
                     type: object
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_value_id}.
+                      The field is ignored (both PUT & PATCH) when empty.
+                    type: object
+                    x-kubernetes-map-type: granular
                 required:
                 - location
                 type: object
@@ -293,6 +303,16 @@ spec:
                             type: string
                         type: object
                     type: object
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_value_id}.
+                      The field is ignored (both PUT & PATCH) when empty.
+                    type: object
+                    x-kubernetes-map-type: granular
                 type: object
               managementPolicies:
                 default:
@@ -535,6 +555,16 @@ spec:
                       share storage, this number is expected to change with backup
                       creation/deletion.
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_value_id}.
+                      The field is ignored (both PUT & PATCH) when empty.
+                    type: object
+                    x-kubernetes-map-type: granular
                   terraformLabels:
                     additionalProperties:
                       type: string
