--- a/package/crds/monitoring.gcp.upbound.io_alertpolicies.yaml
+++ b/package/crds/monitoring.gcp.upbound.io_alertpolicies.yaml
@@ -3101,6 +3101,13 @@ spec:
                               type: string
                           type: object
                         type: array
+                      notificationPrompts:
+                        description: |-
+                          Control when notifications will be sent out.
+                          Each value may be one of: NOTIFICATION_PROMPT_UNSPECIFIED, OPENED, CLOSED.
+                        items:
+                          type: string
+                        type: array
                       notificationRateLimit:
                         description: |-
                           Required for alert policies with a LogMatch condition.
@@ -3420,6 +3427,12 @@ spec:
                                 This field is optional. If this field is not empty, then it must be a
                                 valid Prometheus label name.
                               type: string
+                            disableMetricValidation:
+                              description: |-
+                                Whether to disable metric existence validation for this condition.
+                                Users with the monitoring.alertPolicyViewer role are able to see the
+                                name of the non-existent metric in the alerting policy condition.
+                              type: boolean
                             duration:
                               description: |-
                                 The amount of time that a time series must
@@ -3972,6 +3985,13 @@ spec:
                               type: string
                           type: object
                         type: array
+                      notificationPrompts:
+                        description: |-
+                          Control when notifications will be sent out.
+                          Each value may be one of: NOTIFICATION_PROMPT_UNSPECIFIED, OPENED, CLOSED.
+                        items:
+                          type: string
+                        type: array
                       notificationRateLimit:
                         description: |-
                           Required for alert policies with a LogMatch condition.
@@ -4291,6 +4311,12 @@ spec:
                                 This field is optional. If this field is not empty, then it must be a
                                 valid Prometheus label name.
                               type: string
+                            disableMetricValidation:
+                              description: |-
+                                Whether to disable metric existence validation for this condition.
+                                Users with the monitoring.alertPolicyViewer role are able to see the
+                                name of the non-existent metric in the alerting policy condition.
+                              type: boolean
                             duration:
                               description: |-
                                 The amount of time that a time series must
@@ -5015,6 +5041,13 @@ spec:
                               type: string
                           type: object
                         type: array
+                      notificationPrompts:
+                        description: |-
+                          Control when notifications will be sent out.
+                          Each value may be one of: NOTIFICATION_PROMPT_UNSPECIFIED, OPENED, CLOSED.
+                        items:
+                          type: string
+                        type: array
                       notificationRateLimit:
                         description: |-
                           Required for alert policies with a LogMatch condition.
@@ -5334,6 +5367,12 @@ spec:
                                 This field is optional. If this field is not empty, then it must be a
                                 valid Prometheus label name.
                               type: string
+                            disableMetricValidation:
+                              description: |-
+                                Whether to disable metric existence validation for this condition.
+                                Users with the monitoring.alertPolicyViewer role are able to see the
+                                name of the non-existent metric in the alerting policy condition.
+                              type: boolean
                             duration:
                               description: |-
                                 The amount of time that a time series must
